💰 Updated Swagger Comments
