# docs/swagger.json
@@ -2720,7 +2720,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Seller Order"
+                    "Seller Offer"
                 ],
                 "summary": "Update offer status",
                 "parameters": [
@@ -2993,7 +2993,7 @@
                     {
                         "type": "string",
                         "description": "Time intervals",
-                        "name": "status",
+                        "name": "filter",
                         "in": "query"
                     }
                 ],
